--- a/conf/cmi/field.field.node.event.field_in_language.yml
+++ b/conf/cmi/field.field.node.event.field_in_language.yml
@@ -1,19 +1,29 @@
-uuid: 66526392-fdd1-4a17-b393-0925200d7b0b
+uuid: 7f881f61-a328-4bac-92e5-e57db99cb2fd
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_in_language
     - node.type.event
+    - taxonomy.vocabulary.event_languages
 id: node.event.field_in_language
 field_name: field_in_language
 entity_type: node
 bundle: event
-label: 'in language'
+label: 'In Language'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  handler: 'default:taxonomy_term'
+  handler_settings:
+    target_bundles:
+      event_languages: event_languages
+    sort:
+      field: name
+      direction: asc
+    auto_create: false
+    auto_create_bundle: ''
+field_type: entity_reference
