--- a/conf/cmi/field.storage.node.field_in_language.yml
+++ b/conf/cmi/field.storage.node.field_in_language.yml
@@ -1,20 +1,19 @@
-uuid: 7fd6cc7c-8d6b-483e-a011-f9c5e89dda53
+uuid: 059ae4ec-c965-4a9e-8743-bd7f68b90cdc
 langcode: en
 status: true
 dependencies:
   module:
     - node
+    - taxonomy
 id: node.field_in_language
 field_name: field_in_language
 entity_type: node
-type: string
+type: entity_reference
 settings:
-  max_length: 255
-  case_sensitive: false
-  is_ascii: false
+  target_type: taxonomy_term
 module: core
 locked: false
-cardinality: 1
+cardinality: -1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
