--- a/conf/cmi/core.entity_form_display.node.event.default.yml
+++ b/conf/cmi/core.entity_form_display.node.event.default.yml
@@ -18,6 +18,7 @@ dependencies:
     - field.field.node.event.field_location_extra_info
     - field.field.node.event.field_location_id
     - field.field.node.event.field_offers_info_url
+    - field.field.node.event.field_provider
     - field.field.node.event.field_publisher
     - field.field.node.event.field_short_description
     - field.field.node.event.field_start_time
@@ -110,14 +111,6 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_in_language:
-    type: string_textfield
-    weight: 17
-    region: content
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
   field_info_url:
     type: string_textfield
     weight: 29
@@ -160,6 +153,14 @@ content:
   field_offers_info_url:
     type: string_textfield
     weight: 34
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_provider:
+    type: string_textfield
+    weight: 35
     region: content
     settings:
       size: 60
@@ -297,4 +298,5 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_in_language: true
   hide_sidebar_navigation: true
