--- a/conf/cmi/core.entity_view_display.node.event.default.yml
+++ b/conf/cmi/core.entity_view_display.node.event.default.yml
@@ -18,6 +18,7 @@ dependencies:
     - field.field.node.event.field_location_extra_info
     - field.field.node.event.field_location_id
     - field.field.node.event.field_offers_info_url
+    - field.field.node.event.field_provider
     - field.field.node.event.field_publisher
     - field.field.node.event.field_short_description
     - field.field.node.event.field_start_time
@@ -60,6 +61,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     weight: 3
+    region: content
+  field_provider:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 4
     region: content
   links:
     settings: {  }
