--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.6.7",
         "druidfi/omen": "^0.2.0",
-        "drupal/core-composer-scaffold": "^9.5",
-        "drupal/core-recommended": "^9.5",
+        "drupal/core": "^9.4",
+        "drupal/core-composer-scaffold": "^9.4",
         "drupal/easy_install": "^10.5",
         "drupal/entity_browser": "^2.8",
         "drupal/focal_point": "^1.5",
@@ -21,12 +21,11 @@
         "drupal/hdbt_admin": "1.8.6",
         "drupal/helfi_ahjo": "^1.0",
         "drupal/helfi_azure_fs": "^1.0",
-        "drupal/helfi_hauki": "^1.0",
         "drupal/helfi_linkedevents": "^1.0",
         "drupal/helfi_platform_config": "^2.16.7",
         "drupal/helfi_tpr": "^2.0",
         "drupal/helfi_tunnistamo": "^1.0",
-        "drupal/jsonapi_extras": "^3.20",
+        "drupal/jsonapi_extras": "3.23.0",
         "drupal/jsonapi_image_styles": "^3.0",
         "drupal/jsonapi_menu_items": "^1.2",
         "drupal/linkit": "6.0.0-beta4",
