--- a/conf/cmi/core.entity_view_display.node.landing_page.default.yml
+++ b/conf/cmi/core.entity_view_display.node.landing_page.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.landing_page.field_liftup_image
     - field.field.node.landing_page.field_metatags
     - field.field.node.landing_page.field_notification
+    - field.field.node.landing_page.field_search_keyword_text
     - field.field.node.landing_page.field_search_keywords
     - node.type.landing_page
   module:
@@ -38,6 +39,13 @@ content:
       link: ''
     third_party_settings: {  }
     weight: 1
+    region: content
+  field_search_keyword_text:
+    type: basic_string
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 4
     region: content
   field_search_keywords:
     type: entity_reference_label
