--- a/conf/cmi/core.entity_view_display.node.page.search_index.yml
+++ b/conf/cmi/core.entity_view_display.node.page.search_index.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.node.page.field_lower_content
     - field.field.node.page.field_metatags
     - field.field.node.page.field_notification
+    - field.field.node.page.field_search_keyword_text
     - field.field.node.page.field_search_keywords
     - field.field.node.page.field_sidebar_content
     - node.type.page
@@ -42,6 +43,7 @@ hidden:
   field_lower_content: true
   field_metatags: true
   field_notification: true
+  field_search_keyword_text: true
   field_search_keywords: true
   field_sidebar_content: true
   langcode: true
