--- a/conf/cmi/search_api.index.articles_sv.yml
+++ b/conf/cmi/search_api.index.articles_sv.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.storage.paragraph.field_accordion_title
     - field.storage.node.field_lead
     - field.storage.node.field_search_keywords
+    - field.storage.node.field_search_keyword_text
     - search_api.server.elastic
   module:
     - node
@@ -72,6 +73,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_lead
+  field_search_keyword_text:
+    label: 'Search keyword text'
+    datasource_id: 'entity:node'
+    property_path: field_search_keyword_text
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_search_keyword_text
   field_search_keywords:
     label: 'Search keywords » Taxonomy term » Name'
     datasource_id: 'entity:node'
@@ -142,6 +151,7 @@ processor_settings:
       - field_accordion_title
       - field_article_category
       - field_lead_in
+      - field_search_keyword_text
       - field_search_keywords
       - field_text
       - title
